--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </head>
 <body>
 <div align="center">
-<p><img style="border: 0px solid ;" src="http://geoffreycolinfisher.github.io/images/home.png" alt="home" usemap="#Map"></p>
+<p><img style="border: 0px solid ;" src="http://geoffreycolinfisher.github.io/images/home.jpg" alt="home" usemap="#Map"></p>
 <p>Catch me as a cohost of <a href="https://itunes.apple.com/us/podcast/dads-on-dads-on-dads/id1452821966?mt=2" target="_blank">Dads on Dads on Dads</a>, a podcast from Outrun the Bear Media<br>
 </p>
 <h1 style="font-weight: normal; font-size: 2px; font-family: Helvetica,Arial,sans-serif; color: rgb(0, 58, 156);">New
