--- a/photos.html
+++ b/photos.html
@@ -26,11 +26,11 @@ var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.o
 </head>
 <body onload="MM_preloadImages('../images/1.jpg','../images/2.jpg','../images/3.jpg','../images/4.jpg','../images/5.jpg')">
 <ul class="nav">
-<li><a href="http://colinfisher.net/resume.html">resume</a></li>
-<li><a href="http://colinfisher.net/reel.html">reel</a></li>
-<li><a href="http://colinfisher.net/photos.html">photos</a></li>
-<li><a href="http://colinfisher.net/writing.html">writing</a></li>
-<li><a href="http://colinfisher.net/about.html">about</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
 <li><a href="http://colinfisher.net/blog" target="blank">blog</a></li>
 </ul>
 <div align="center">
