--- a/resume.html
+++ b/resume.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <ul class="nav">
-<li><a href="http://colinfisher.net/resume.html">resume</a></li>
-<li><a href="http://colinfisher.net/reel.html">reel</a></li>
-<li><a href="http://colinfisher.net/photos.html">photos</a></li>
-<li><a href="http://colinfisher.net/writing.html">writing</a></li>
-<li><a href="http://colinfisher.net/about.html">about</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
+<li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
 <li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
