--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <p><img style="border: 0px solid ;" src="http://geoffreycolinfisher.github.io/images/home.png" alt="home" usemap="#Map"></p>
 <h1 style="font-weight: normal; font-size: 2px; font-family: Helvetica,Arial,sans-serif; color: rgb(0, 58, 156);">New
 York City-based actor and writer Colin Fisher</h1>
-<map name="Map" id="Map"><area shape="rect" coords="16,105,134,129" href="resume.html" target="_top" alt="my resume"><area shape="rect" coords="15,144,76,167" href="reel.html" target="_top" alt="my reel"><area shape="rect" coords="14,177,175,205" href="photos.html" alt="my headshots"><area shape="rect" coords="14,218,120,246" href="writing.html" alt="my writing"><area shape="rect" coords="16,254,108,278" href="about.html" alt="about me"><area shape="rect" coords="15,287,83,320" href="http://colinfisher.net/blog/" alt="my blog"></map>
+<map name="Map" id="Map"><area shape="rect" coords="16,105,134,129" href="resume.html" target="_top" alt="my resume"><area shape="rect" coords="15,144,76,167" href="reel.html" target="_top" alt="my reel"><area shape="rect" coords="14,177,175,205" href="photos.html" alt="my headshots"><area shape="rect" coords="14,218,120,246" href="writing.html" alt="my writing"><area shape="rect" coords="16,254,108,278" href="about.html" alt="about me"><area shape="rect" coords="15,287,83,320" href="http://colinfisheractor.wordpress.com/" alt="my blog"></map>
 </div>
 </body></html>
