--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,7 @@ var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.o
 <li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
 <li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
 <li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
-<li><a href="http://colinfisher.net/blog" target="blank">blog</a></li>
+<li><a href="http://colinfisheractor.wordpress.com" target="blank">blog</a></li>
 </ul>
 <div align="center">
 <div align="center"><img src="../images/1.jpg" name="central" id="central" height="530"></div>
