--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
 <li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
 <li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
-<li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
+<li><a href="http://colinfisheractor.wordpress.com" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
 <div style="text-align: center; font-weight: bold;">SAG-AFTRA
