Wizard photo edit

--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@ what would I say no to? (The answer is touring children's theatre.)</p>
 <p>I have a wife and a cat and a dog, in that order. &nbsp;My
 dog is WAY more famous than me--<a href="https://instagram.com/omarcomin_/" target="blank">exhibit
 A</a>.</p>
-<p>And once, I played a gay wizard on Saturday Night Live.</p>
+<p>And once, I backed that wizard thing up on Bill Hader.</p>
 <p>For reals.</p>
 </div>
-<img src="http://geoffreycolinfisher.github.io/images/GayWizard.jpg">
+<img src="http://geoffreycolinfisher.github.io/images/ColinWizard.jpg">
 <map id="Map3" name="Map3"><area href="../index.html" coords="39,33,162,75" shape="rect"><area href="../resume.html" coords="57,124,141,159" shape="rect"><area href="../reel.html" coords="22,207,174,243" shape="rect"><area href="../photos.html" coords="38,291,164,326" shape="rect"><area href="../writing.html" coords="22,376,172,414" shape="rect"></map>
 <br>
 <br>
