--- a/reel.html
+++ b/reel.html
@@ -6,21 +6,17 @@
 </head>
 <body>
 <ul class="nav">
-<li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
-<li><a href="http://colinfisheractor.wordpress.com" target="blank">blog</a></li>
+<li><a href="http://colinfisher.net/resume.html">resume</a></li>
+<li><a href="http://colinfisher.net/reel.html">reel</a></li>
+<li><a href="http://colinfisher.net/photos.html">photos</a></li>
+<li><a href="http://colinfisher.net/writing.html">writing</a></li>
+<li><a href="http://colinfisher.net/about.html">about</a></li>
+<li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
 <p style="font-family: Arial; color: white;" align="center"><a href="mailto:geoffreycolinfisher@gmail.com"><u>geoffreycolinfisher@gmail.com</u></a><br>
 </p>
-<<<<<<< HEAD
-<center><iframe src="https://youtube.com/embed/F2r3ib-zUnw" allowfullscreen="" frameborder="0" height="480" width="853"></iframe><br>
-=======
-<center><iframe src="https://www.youtube.com/embed/F2r3ib-zUnw" allowfullscreen="" frameborder="0" height="480" width="853"></iframe><br>
->>>>>>> 6e485970bbd3a6fcf46e95468aaab1e8670252a4
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/V7zoZDJ8FUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <map name="Map3" id="Map3"><area shape="rect" coords="39,33,162,75" href="../index.html"><area shape="rect" coords="57,124,141,159" href="../resume.html"><area shape="rect" coords="22,207,174,243" href="../photos.html"><area shape="rect" coords="38,291,164,326" href="../about.html"><area shape="rect" coords="22,376,172,414" href="../writing.html"></map>
 <br>
