--- a/about.html
+++ b/about.html
@@ -6,16 +6,19 @@
 </head>
 <body>
 <ul class="nav">
-<li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
-<li><a href="http://colinfisheractor.wordpress.com" target="blank">blog</a></li>
+<li><a href="http://colinfisher.net/resume.html">resume</a></li>
+<li><a href="http://colinfisher.net/reel.html">reel</a></li>
+<li><a href="http://colinfisher.net/photos.html">photos</a></li>
+<li><a href="http://colinfisher.net/writing.html">writing</a></li>
+<li><a href="http://colinfisher.net/about.html">about</a></li>
+<li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <div style="width: 899px;">
 <h1 align="center">Colin Fisher</h1>
-<p style="font-family: Arial; color: white;" align="center"><a href="mailto:geoffreycolinfisher@gmail.com"><u>geoffreycolinfisher@gmail.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">Glitter Talent Agency</p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:jennifer@glittertalent.com"><u>Jennifer@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 <p>I am a Manhattan-based actor who dabbles in a bit of
 writing. Self promotion makes me a little queasy, but here we go!</p>
 <p>
@@ -31,10 +34,10 @@ what would I say no to? (The answer is touring children's theatre.)</p>
 <p>I have a wife and a cat and a dog, in that order. &nbsp;My
 dog is WAY more famous than me--<a href="https://instagram.com/omarcomin_/" target="blank">exhibit
 A</a>.</p>
-<p>And once, I backed that wizard thing up on Bill Hader.</p>
+<p>And once, I played a gay wizard on Saturday Night Live.</p>
 <p>For reals.</p>
 </div>
-<img src="http://geoffreycolinfisher.github.io/images/ColinWizard.jpg">
+<img src="http://colinfisher.net/images/GayWizard.jpg">
 <map id="Map3" name="Map3"><area href="../index.html" coords="39,33,162,75" shape="rect"><area href="../resume.html" coords="57,124,141,159" shape="rect"><area href="../reel.html" coords="22,207,174,243" shape="rect"><area href="../photos.html" coords="38,291,164,326" shape="rect"><area href="../writing.html" coords="22,376,172,414" shape="rect"></map>
 <br>
 <br>
