--- a/reel.html
+++ b/reel.html
@@ -14,8 +14,10 @@
 <li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
-<p style="font-family: Arial; color: white;" align="center"><a href="mailto:geoffreycolinfisher@gmail.com"><u>geoffreycolinfisher@gmail.com</u></a><br>
-</p>
+<p style="font-family: Arial; color: white;" align="center">Glitter Talent Agency</p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:jennifer@glittertalent.com"><u>Jennifer@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/V7zoZDJ8FUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
 <map name="Map3" id="Map3"><area shape="rect" coords="39,33,162,75" href="../index.html"><area shape="rect" coords="57,124,141,159" href="../resume.html"><area shape="rect" coords="22,207,174,243" href="../photos.html"><area shape="rect" coords="38,291,164,326" href="../about.html"><area shape="rect" coords="22,376,172,414" href="../writing.html"></map>
