--- a/resume.html
+++ b/resume.html
@@ -6,17 +6,20 @@
 </head>
 <body>
 <ul class="nav">
-<li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/photos.html">photos</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/writing.html">writing</a></li>
-<li><a href="http://geoffreycolinfisher.github.io/about.html">about</a></li>
-<li><a href="http://colinfisheractor.wordpress.com" target="blank">blog</a></li>
+<li><a href="http://colinfisher.net/resume.html">resume</a></li>
+<li><a href="http://colinfisher.net/reel.html">reel</a></li>
+<li><a href="http://colinfisher.net/photos.html">photos</a></li>
+<li><a href="http://colinfisher.net/writing.html">writing</a></li>
+<li><a href="http://colinfisher.net/about.html">about</a></li>
+<li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
 <div style="text-align: center; font-weight: bold;">SAG-AFTRA
 </div>
-<p style="font-family: Arial; color: white;" align="center"><a href="mailto:geoffreycolinfisher@gmail.com"><u>geoffreycolinfisher@gmail.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">Glitter Talent Agency</p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:jennifer@glittertalent.com"><u>Jennifer@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 <h3>FILM (selected)</h3>
 <table border="0" width="75%">
 <tbody>
