--- a/about.html
+++ b/about.html
@@ -15,7 +15,10 @@
 </ul>
 <div style="width: 899px;">
 <h1 align="center">Colin Fisher</h1>
-<p style="font-family: Arial; color: white;" align="center"><a href="mailto:geoffreycolinfisher@gmail.com"><u>geoffreycolinfisher@gmail.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">Glitter Talent Agency</p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:jennifer@glittertalent.com"><u>Jennifer@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
+<p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 <p>I am a Manhattan-based actor who dabbles in a bit of
 writing. Self promotion makes me a little queasy, but here we go!</p>
 <p>
