--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,11 @@
 <li><a href="http://colinfisher.net/photos.html">photos</a></li>
 <li><a href="http://colinfisher.net/writing.html">writing</a></li>
 <li><a href="http://colinfisher.net/about.html">about</a></li>
-<li><a href="http://colinfisher.net/blog/" target="blank">blog</a></li>
 </ul>
 <h1 align="center">Colin Fisher</h1>
 <div style="text-align: center; font-weight: bold;">SAG-AFTRA
 </div>
 <p style="font-family: Arial; color: white;" align="center">Glitter Talent Agency</p>
-<p style="font-family: Arial; color: white;" align="center"><a href="mailto:jennifer@glittertalent.com"><u>Jennifer@GlitterTalent.com</u></a></p>
 <p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
 <p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 <h3>FILM (selected)</h3>
@@ -143,6 +141,21 @@ Arrest</td>
 <td width="363" style="width: 363px;"><u>New York</u></td>
 </tr>
 <tr>
+<td style="width: 363px;">Team Inky</td>
+<td width="265">Longform house team</td>
+<td width="597">Magnet Megawatt</td>
+</tr>
+<tr>
+<td style="width: 363px;">Doom Scroll</td>
+<td width="265">Performer, varous</td>
+<td width="597">Magnet Sketch Circuit</td>
+</tr>
+<tr>
+<td style="width: 363px;">Next Level</td>
+<td width="265">Longform improv team</td>
+<td width="597">Various venues</td>
+</tr>
+<tr>
 <td style="width: 363px;">NaSkeWriMo Sketch Show</td>
 <td width="265">Performer &amp; writer</td>
 <td width="597">Upright Citizens Brigade Theatre</td>
@@ -241,11 +254,11 @@ Guildenstern are Dead</td>
 </table>
 <h3>TRAINING</h3>
 <p><b>Bob Krakower</b>, on-camera (advanced)<b><br>
+Improv,</b> The Magnet Theatre (full curriculum), UCB<b><br>
 Lyle Kessler Master Class</b>, scene study<br>
   <b>New School for Drama</b>, New York City,
   MFA in Acting<br>
-  <b>Upright Citizen's Brigade</b>: Improv<br>
-<b>University of Tennessee</b>, BA in Theatre</p>
+  <b>University of Tennessee</b>, BA in Theatre</p>
 <h3>SKILLS</h3>
 <p>Dialects: American Southern, Classical American,
 Standard
