Edited team name

--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,7 @@ Arrest</td>
 <td width="363" style="width: 363px;"><u>New York</u></td>
 </tr>
 <tr>
-<td style="width: 363px;">Team Inky</td>
+<td style="width: 363px;">Behemoth</td>
 <td width="265">Longform house team</td>
 <td width="597">Magnet Megawatt</td>
 </tr>
