Adding Mood Light

--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,11 @@ Arrest</td>
 <td width="597">Magnet Megawatt</td>
 </tr>
 <tr>
+<td style="width: 363px;">Mood Light</td>
+<td width="265">House sketch team</td>
+<td width="597">Magnet LiveWire</td>
+</tr>
+<tr>
 <td style="width: 363px;">Doom Scroll</td>
 <td width="265">Performer, varous</td>
 <td width="597">Magnet Sketch Circuit</td>
