Updated sketch team on resume, index, resumefile

--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,10 @@ Arrest</td>
 <td width="597">Magnet Megawatt</td>
 </tr>
 <tr>
+<td style="width: 363px;">Money & Things</td>
+<td width="265">House sketch team</td>
+<td width="597">Magnet LiveWire</td>
+<tr>
 <td style="width: 363px;">Mood Light</td>
 <td width="265">House sketch team</td>
 <td width="597">Magnet LiveWire</td>
