New headshots, edits

--- a/photos.html
+++ b/photos.html
@@ -24,7 +24,7 @@ var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.o
 }
 </script>
 </head>
-<body onload="MM_preloadImages('../images/1.jpg','../images/2.jpg','../images/3.jpg','../images/4.jpg','../images/5.jpg')">
+<body onload="MM_preloadImages('../images/1.jpg','../images/2.jpg','../images/3.jpg')">
 <ul class="nav">
 <li><a href="http://geoffreycolinfisher.github.io/resume.html">resume</a></li>
 <li><a href="http://geoffreycolinfisher.github.io/reel.html">reel</a></li>
