--- a/writing.html
+++ b/writing.html
@@ -18,7 +18,7 @@
 <p style="font-family: Arial; color: white;" align="center"><a href="mailto:hilda@glittertalent.com"><u>Hilda@GlitterTalent.com</u></a></p>
 <p style="font-family: Arial; color: white;" align="center">201-758-7272</p>
 My writing has
-been featured on <a href="https://www.vulture.com/search.html?q=%22colin+fisher%22" target="blank"><u>Vulture</u></a> and,
+been featured on <a href="https://www.vulture.com/tags/colin-fisher" target="blank"><u>Vulture</u></a> and,
 most
 recently, <a href="http://www.mcsweeneys.net/authors/colin-fisher" target="blank"><u>McSweeney's</u></a>.  I was also one of the&nbsp;writers on Backstage's Unscripted
 blog. <br>
