--- a/photos.html
+++ b/photos.html
@@ -35,6 +35,5 @@ var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.o
 </ul>
 <div align="center">
 <div align="center"><img src="../images/1.jpg" name="central" id="central" height="530"></div>
-<div align="center"><img src="../images/1.jpg" name="image1" id="image1" onclick="MM_swapImage('central','','../images/1.jpg',1)" height="100"><img src="../images/2.jpg" name="image2" id="image2" onclick="MM_swapImage('central','','../images/2.jpg',1)" height="100"><img src="../images/3.jpg" name="image3" id="image3" onclick="MM_swapImage('central','','../images/3.jpg',1)" height="100"><img src="../images/4.jpg" name="image4" id="image4" onclick="MM_swapImage('central','','../images/4.jpg',1)" height="100"><img src="../images/5.jpg" name="image5" id="image5" onclick="MM_swapImage('central','','../images/5.jpg',1)" height="100"></div>
-Photography by <a href="http://tedely.com" target="blank">Ted Ely</a></div>
+<div align="center"><img src="../images/1.jpg" name="image1" id="image1" onclick="MM_swapImage('central','','../images/1.jpg',1)" height="100"><img src="../images/2.jpg" name="image2" id="image2" onclick="MM_swapImage('central','','../images/2.jpg',1)" height="100"><img src="../images/3.jpg" name="image3" id="image3" onclick="MM_swapImage('central','','../images/3.jpg',1)" height="100"></div>
 </body></html>
